k8s/overlays/vafi-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vtf-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vtf.viloforge.com
        - vtf-dev.viloforge.com
      secretName: vtf-tls
  rules:
    - host: vtf.viloforge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vtf-api
                port:
                  number: 8000
    - host: vtf-dev.viloforge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vtf-api
                port:
                  number: 8000
